assets/frontend/css/styles.css
/* ... */
ul.list-products li a.minimal-price-link {
    margin-top: -30px;
    float:right;
    clear:both;
}

ul.list-products li h3.original-price {
    margin-top: -83px;
}

/* ----------------------------- SINGLE PRODUCT DISPLAY */

div.col1-layout form#product_addtocart_form {
    width: 100%;
}

/* Product image display */

section.hproduct div#photos {
    float: left;
    margin: 0 20px 0 0;
    width: 340px;
}

section.hproduct div#photos ul.no-javascript {
    float: left;
    margin-top: 350px;
    width: 340px;
}

section.hproduct div#photos ul.no-javascript li {
    float: left;
    list-style-type: none;
}

section.hproduct div#photos div.hoverscroll {
    margin-top: 350px;
}

section.hproduct div#photos ul li.active-photo {
    opacity: 0.5;
}

section.hproduct div#photos ul li a img {
    border: 1px solid;
    margin: 0 1px;
}

section.hproduct div#photos div.current-photo {
    float: left;
}

section.hproduct h1.product-name {
    margin-top: 10px;
}

section.hproduct aside.description {
    clear: both;
    padding: 0 20px 20px 20px;
}

aside.description p,
div.description p {
    padding-bottom: 10px;
}

section.hproduct abbr.rating {
    float: left;
}

section.hproduct a.link-review {
    display: block;
}

section.hproduct div.description {
    padding: 10px 0;
}

/* Product options */

table.data-table.grouped-items-table {
    float:left;
    width:358px;
}

aside.product-options {
    border: 1px solid;
    float: left;
    margin-bottom: 20px;
    padding: 10px 20px;
    width: 318px;
}

aside.product-options dl select {
    width: 99%;
}

aside.product-options dl dd {
    margin-bottom: 10px;
    padding-bottom: 10px;
    border-bottom:1px solid #D6D6D6;
}

aside.product-options dl dd.last {
    border-bottom:0;
}

aside.product-options label {
    display:inline;
}

table.grouped-items-table input.qty,
aside.product-options input.qty {
    width:2.5em;
}

aside.product-options ul li {
    margin-bottom: 0;
}

aside.product-options-bottom {
    width:140px;
    float:right;
}

section.hproduct div.actions {
    float: right;
    margin-bottom: 20px;
    overflow: hidden;
    width: 140px;
}

section.hproduct div.actions.addtocart {
    margin:0;
    float:right;
}

section.hproduct div.out-of-stock {
    width:219px;
    float:right;
}

section.hproduct p.price-as-configured {
    width:219px;
    float:right;
}

section.hproduct div.out-of-stock p.out-of-stock {
    padding-right: 10px;
    padding-bottom: 10px;
    text-align: right;
}

section.hproduct div.actions fieldset.quantity {
    float: right;
    margin-right: 25px;
    margin-bottom: 10px;
}

section.hproduct div.actions fieldset input.text {
    width: 30px;
}

section.hproduct div.actions button {
    clear: right;
    float: right;
    margin-right: 20px;
}

section.hproduct div.actions ul.add-to-links {
    clear: right;
    float: right;
    margin-top: 10px;
    margin-right: 25px;
}

section.hproduct div.actions ul.add-to-links li {
    list-style-type: none;
    text-align: right;
    margin-bottom:0;
}

/* Social buttons */

section.hproduct ul.social-buttons {
    float: left;
    overflow: hidden;
    padding: 20px 20px 20px 0;
}

section.hproduct aside.product-options-bottom + ul.social-buttons {
    padding-left:20px;
}

aside.tiered-pricing + ul.social-buttons {
    clear:both;
    padding-left:20px;
}

section.hproduct ul.social-buttons li {
    float: left;
    list-style-type: none;
    margin:0 10px 0 0;
}

section.hproduct ul.social-buttons li.email {
    clear: both;
    display: block;
}

section.hproduct .box-description { 
    clear:both; 
    padding-top:20px;
}

/* ----------------------------- TIERED PRICING */

aside.tiered-pricing {
    border: 2px dashed;
    float: left;
    margin: 10px 10px 0 0;
    padding: 20px;
    width: 280px;
}

aside.tiered-pricing ul li {
    list-style-type: none;
}

/* ----------------------------- ADDITIONAL INFORMATION */

aside#additional-information {
    border: 1px solid;
    -moz-border-radius: 5px;
    border-radius: 5px;
    padding: 10px 20px 20px 20px;
    margin-bottom: 20px;
}

aside#additional-information dl {
    overflow: hidden;
}

aside#additional-information dt {
    border-top: 1px solid;
    clear: both;
    float: left;
    padding-top: 5px;
    width: 25%;
}

aside#additional-information dd {
    border-top: 1px solid;
    float: left;
    margin-bottom: 10px;
    padding-top: 5px;
    width: 75%;
}

aside#additional-information dd ul,
aside#additional-information dd ol {
    margin-left: 15px;
}

/* ----------------------------- PRODUCT REVIEWS */

aside#reviews {
    clear:both;
    border: 1px solid;
    -moz-border-radius: 5px;
    border-radius: 5px;
    padding: 10px 20px 20px 20px;
    margin-bottom: 20px;
}

aside#reviews form>h2 {
    margin-top: 1.5em;
    padding-bottom: 0;  
}

/* Star ratings */

abbr.rating {
    background: url(../images/star-ratings.gif) top left no-repeat;
    display: block;
    height: 16px;
    margin: 3px 10px 5px -2px;
    width: 85px;
}

section.hproduct abbr.rating {
    float: none;
    margin-left: 358px;
}

section.hproduct aside#reviews abbr.rating {
    float: none;
    margin-left: -2px;
}

abbr.rating span {
    background: url(../images/star-ratings.gif) bottom left no-repeat;
    display: block;
    height: 17px;
    text-indent: -999999px;
    width: 85px;
}

aside#reviews h3 {
    border-top: 1px solid;
    margin-top: 10px;
    padding-top: 10px;
}

ul.products-grid li a.link-review {
    display: block;
}

ul#reviews-list div.rating-box { 
    float:left;
    width:100px;
}

.rating-box { width:69px; height:13px; font-size:0; line-height:0; background:url(../images/bkg_rating.gif) 0 0 repeat-x; text-indent:-999em; overflow:hidden; }
.rating-box .rating { float:left; height:13px; background:url(../images/bkg_rating.gif) 0 100% repeat-x; }

aside#reviews div.description {
    clear:both;
}
/* ... */

